# icm20948-linux

./: CMakeLists.txt  README.md
include/: icm20948.h  icm20948_reg.h
src/: icm20948.c
test/: test_sensor_read.c
